--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <p>De forma a consolidar todos os conhecimentos, farão semanalmente um laboratório, na aula prática (de entrega obrigatória) de aplicação da matéria lecionada, e irão implementar um projeto completo.</p>
 
     <img src="img/wordcloud.png">
+
+    <p><a href="report.html"></a></p>
+
 </body>
 </html>
