--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <img src="img/wordcloud.png">
 
-    <p><a href="report.html"></a></p>
+    <a href="report.html">Report</a>
 
 </body>
 </html>
