--- a/report.html
+++ b/report.html
@@ -67,28 +67,28 @@
     <p>Nos headers consegui observar que o ficheiro que falhou a carregar tem 4 abas que podemos expandir sendo elas:</p>
     <ul>
         <li>General</li>
-        <img src="img/headers-failed.png" alt="headers-failed-General">
+        <img src="img/headers-failed.PNG" alt="headers-failed-General">
         <p class="legenda">Figura 2.7.1 - </p>
         <li>Response Headers</li>
-        <img src="img/headers-failed2.png" alt="headers-failed-Response">
+        <img src="img/headers-failed2.PNG" alt="headers-failed-Response">
         <p class="legenda">Figura 2.7.2 - </p>
         <li>Request Headers</li>
-        <img class="wide-img" src="img/headers-failed3.png" alt="headers-failed-Request">
+        <img class="wide-img" src="img/headers-failed3.PNG" alt="headers-failed-Request">
         <p class="legenda">Figura 2.7.3 - </p>
         <li>Query String Parameters</li>
-        <img src="img/headers-failed4.png" alt="headers-failed-Query">
+        <img src="img/headers-failed4.PNG" alt="headers-failed-Query">
         <p class="legenda">Figura 2.7.4 - </p>
     </ul>
     <p>Já o ficheiro que foi carregado com sucesso consegui observar apenas as 3 primeiras abas da lista anterior</p>
     <ul>
         <li>General</li>
-        <img src="img/headers-moodle.png" alt="headers-moodle-General">
+        <img src="img/headers-moodle.PNG" alt="headers-moodle-General">
         <p class="legenda">Figura 2.8.1 - </p>
         <li>Response Headers</li>
-        <img src="img/headers-moodle2.png" alt="headers-moodle-Response">
+        <img src="img/headers-moodle2.PNG" alt="headers-moodle-Response">
         <p class="legenda">Figura 2.8.2 - </p>
         <li>Request Headers</li>
-        <img class="wide-img" src="img/headers-moodle3.png" alt="headers-moodle-Request">
+        <img class="wide-img" src="img/headers-moodle3.PNG" alt="headers-moodle-Request">
         <p class="legenda">Figura 2.8.3 - </p>
     </ul>
     <br>
