--- a/index.html
+++ b/index.html
@@ -3,6 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Primeira página</title>
+    <style>
+        .btn {
+        background: #3498db;
+        background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+        background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+        background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+        background-image: -o-linear-gradient(top, #3498db, #2980b9);
+        background-image: linear-gradient(to bottom, #3498db, #2980b9);
+        -webkit-border-radius: 60;
+        -moz-border-radius: 60;
+        border-radius: 60px;
+        font-family: Arial;
+        color: #ffffff;
+        font-size: 30px;
+        padding: 10px 25px 10px 25px;
+        border: solid #1f628d 1px;
+        text-decoration: none;
+        }
+  
+        .btn:hover {
+            background: #3cb0fd;
+            background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+            background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+            background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+            background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+            background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+            text-decoration: none;
+        }
+
+        .btn {
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <h1> Programação Web </h1>
@@ -19,7 +52,8 @@
 
     <img src="img/wordcloud.png">
 
-    <a href="report.html">Report</a>
+    <a class="btn" href="report.html">Report</a>
+    
 
 </body>
 </html>
