--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>PW Labs</title>
+    <title>PW Lab1</title>
   </head>
   <body>
-    <h1>Laboratórios Programação Web</h1>
-    <br>
+    <h1><a href=""></a>Lab1: Conhecer a Internet com a minha primeira página Web</h1>
     <ul>
-      <li><a href="lab1/index.html">Laboratório 1: Conhecer a Internet com a minha primeira página Web</a></li>
-      <li><a href="lab2/index.html">Laboratório 2: Explorando o HTML com o meu primeiro website</a></li>
+      <li><a href="pw.html">Introdução à programação Web</a></li>
+      <li><a href="report.html">Conhecer a Internet</li>
     </ul>
   </body>
 </html>
