--- a/lab1/index.html
+++ b/lab1/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1><a href=""></a>Lab1: Conhecer a Internet com a minha primeira página Web</h1>
     <ul>
-      <li><a href="lab1/pw.html">Introdução à programação Web</a></li>
-      <li><a href="lab1/report.html">Conhecer a Internet</li>
+      <li><a href="pw.html">Introdução à programação Web</a></li>
+      <li><a href="report.html">Conhecer a Internet</li>
     </ul>
   </body>
 </html>
