--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="lab1/index.html">Laboratório 1: Conhecer a Internet com a minha primeira página Web</a></li>
       <li><a href="lab2/index.html">Laboratório 2: Explorando o HTML com o meu primeiro website</a></li>
+      <li><a href="lab3/index.html">Laboratório 3: inclusão de formulários e imagens SVG no meu website</a></li>
     </ul>
   </body>
 </html>
