--- a/info.html
+++ b/info.html
@@ -7,14 +7,14 @@
     <meta name="keywords" content="Amsterdão">
     <meta name="description" content="Website sobre Amsterdão">
     <title>Amsterdão</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
-    
+
     <header>
       <hx class="title">Amsterdão</hx>
       <figure>
@@ -31,54 +31,56 @@
         <br>
       </nav>
     </header>
-
+    
     <main>
 
       <section>
-        <hx id="tema">Introdução</hx>
+        <hx id="tema">Informações</hx>
 
-        <p>A histórica cidade de Amsterdão oferece muitos eventos artísticos e culturais para além das suas lindas ruas e canais que criam um local adorável para se explorar a pé ou de bicicleta.</p>
-        <p>Senão tiver a sorte de apanhar um evento cultural ou artístico, não se preocupe que existem inúmeros pontos turisticos para visitar, como por exemplo <em>A casa de Anne Frank</em>, <em>Heineken Experience</em>, <em>Hortus Botanicus
-            Amsterdam</em>, entre muitos outros e fora as inúmeres pontes, edifícios, igrejas e praças que também merecem uma visita</p>
-        <p>Amsterdão também é conhecido pelo seu espirito liberal, então existem alguns cafés, mais conhecidos por <em>Coffe Shops</em> onde é autorizado o consumo de drogas leves e ainda existe uma indústria de <em>Sexo legalizado</em>. Na <em>Red Light
-            District</em> as ruelas estão lotadas de <em>Sex Shops</em>, bares onde decorrem espetáculos eróticos, cinemas eróticos e até um <em>Museu do Sexo</em></p>
-        <p>Pode ✈️ até à bonita 🏙️ de Amesterdão e poderá 🗺️ inúmeros 🏛️, tem também muitos 🎭, pode ir até às famosas ☕🛍️🌿 ou mesmo à rua 🟥🔞, pode também 🗺️ os canais e andar de 🚣‍♂️ Isto tudo será feito a 🦶🏽 ou de 🚲 pois é uma 🏙️ muito 🤏.</p>
-        <hr>
-        <p>Pode <strong>viajar</strong> até á bonita <strong>cidade</strong> de Amesterdão e <strong>visitar</strong> inúmeros <strong>museus</strong>, tem também muitos <strong>eventos culturais</strong>, pode ir até às famosas <strong>coffe
-            shops</strong> ou mesmo á rua <strong>vermelha</strong>, pode também <strong>visitar</strong> os canais e andar de <strong>barco</strong>. Isto tudo será feito a <strong>pé</strong> ou de <strong>bicicleta</strong> pois é uma
-          <strong>cidade</strong> muito <strong>pequena</strong>.</p>
-        <hr>
-        <ul>
-          <li>Na página <a href="index.html">Introdução</a> vai encontrar uma breve Introdução sobre os pontos turísticos mais conhecidos que pode encontrar em Amesterdão.</li>
-          <li>Na página <a href="local.html">Localização</a> pdoe esperar informações geológicas da cidade, e também ficar a conhecer um pouco da meteorologia da cidade. Encontrará também o mapa de Amesterdão.</li>
-          <li>Na página <a href="multimedia.html">Multimédia</a> encontrará fotograficas emblemáticas sobre Amesterdão e ainda um video de aprensentação sobre a cidade em si, e logo de seguida um pequeno poema.</li>
-          <li>Na página <a href="info.html">Informações</a> vai encontrar informações sobre: </li>
-          <ul>
-            <li>Demografia</li>
-            <li>Geografia</li>
-            <li>O site oficial de Amsterdam</li>
-          </ul>
-          <li>Na página <a href="quizz.html">Quizz</a> poderá esperar um pequeno quizz sobre Amesterdão.</li>
-          <li>Na página <a href="comentarios.html">Comentários</a> servirá como ajuda para melhorar o website com ideias suas.</li>
-          <li>Na página <a href="../index.html">Home</a> poderá encontrar mais trabalhos da minha autoria.</li>
-        </ul>
-
-        <svg width="300" height="254">
-          <image href="images/workcloud.jpeg">
-          </image>
-          <a href="index.html">
-            <polygon opacity="0" points="0,0 300,254 0,254 0,300" />
-          </a>
-          <a href="local.html">
-            <polygon opacity="0" points="116,73 203,163 211,158 132,66" />
-          </a>
-          <a href="info.html">
-            <polygon opacity="0" points="174,108 177,117 221,119 220,113" />
-          </a>
-          <a href="multimedia.html">
-            <polygon opacity="0" points="139,54 140,77 174,94 174,80" />
-          </a>
-        </svg>
+        <p>Na tabela abaixo poderá consultar alguns dados sobre a <strong>demografia</strong> e a <strong>geografia</strong> de Amsterdam</p>
+        <br>
+        <table border="1" cellspacing="2" cellpadding="2">
+          <thead>
+            <caption>
+              <h3>Informações</h3>
+            </caption>
+          </thead>
+          <tbody>
+            <colgroup>
+              <col width="33%" bgcolor="#9b5151">
+              <col bgcolor="#fff">
+              <col bgcolor=" #769fcd">
+            </colgroup>
+            <tr>
+              <td align="center" rowspan="2" >Demografia</td>
+              <td align="center">População</td>
+              <td align="center">872,680 Hab</td>
+            </tr>
+            <tr>
+              <td align="center">Densidade Populacional</td>
+              <td align="center">3.826./km²</td>
+            </tr>
+            <tr>
+              <td align="center" rowspan="3">Geografia</td>
+              <td align="center">Área</td>
+              <td align="center">219,33 km²</td>
+            </tr>
+            <tr>
+              <td align="center">Região</td>
+              <td align="center">Amsterdam</td>
+            </tr>
+            <tr>
+              <td align="center">País</td>
+              <td align="center">Holanda</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td align="center">Website</td>
+              <td align="center" colspan="2"><a href="https://www.amsterdam.nl/en/" target="_blank">www.amsterdam.nl/en/</a></td>
+            </tr>
+          </tfoot>
+        </table>
       </section>
 
       <section>
