--- a/lab4/multimedia.html
+++ b/lab4/multimedia.html
@@ -36,12 +36,12 @@
       
       <section>
         <hx id="tema">Multimédia</hx>
-        <!--<div>
-          <img class="sticky" src="images/amesterdão_sticky.png" alt="">
+        <div class="sticky">
+          <img src="images/amesterdão_sticky.png" alt="">
         </div>
-        <div>
-          <img class="fixed" src="images/amesterdão_sticky.png" alt="">
-        </div>-->
+        <div class="fixed">
+          <img src="images/amesterdão_sticky.png" alt="">
+        </div>
         <picture>
           <figcaption>Flowers&buildings</figcaption>
           <a href="images/amsterdam_grande.jpg" target="Amesterdão">
