--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <ul>
       <li><a href="lab1/index.html">Laboratório 1: Conhecer a Internet com a minha primeira página Web</a></li>
       <li><a href="lab2/index.html">Laboratório 2: Explorando o HTML com o meu primeiro website</a></li>
-      <li><a href="lab3/index.html">Laboratório 3: inclusão de formulários e imagens SVG no meu website</a></li>
+      <li><a href="lab3/index.html">Laboratório 3: Inclusão de formulários e imagens SVG no meu website</a></li>
       <li><a href="lab4/index.html">Laboratório 4: Integração de elementos semânticos HTML5 no meu website e estilização com seletores e propriedades CSS</a></li>
+      <li><a href="lab5/index.html">Laboratório 5: Website responsivo e dinâmico</a></li>
     </ul>
   </body>
 </html>
